@@ -1,52 +1,61 @@
-
 package com.mycompany.ecotrack;
 
-import java.util.ArrayList;
+import java.io.Serializable;
 import java.util.Comparator;
 import java.util.NoSuchElementException;
 
 /**
- *
- * @author Grupo 8
+ * Cola de prioridad (max-heap) implementada con arreglo dinamico propio.
  */
-public class ColaPrioridad<E> {
-    private ArrayList<E> heap;
-    private Comparator<E> comparador;
+public class ColaPrioridad<E> implements Serializable {
+    private static final long serialVersionUID = 1L;
+
+    private final ArrayList<E> heap;
+
+    private transient Comparator<E> comparador;
 
     public ColaPrioridad(Comparator<E> comparador) {
         this.heap = new ArrayList<>();
         this.comparador = comparador;
     }
 
+    /**
+     * Se usa tras deserializar (persistencia) para reinyectar el comparador.
+     */
+    public void setComparador(Comparator<E> comparador) {
+        this.comparador = comparador;
+    }
 
     public void agregarVehiculo(E elemento) {
-        heap.add(elemento);
+        if (comparador == null) {
+            throw new IllegalStateException("Comparador no inicializado.");
+        }
+        heap.addLast(elemento);
         flotar(heap.size() - 1);
     }
 
-
     public E despacharVehiculo() {
         if (estaVacia()) {
-            throw new NoSuchElementException("No hay vehículos para despachar.");
+            throw new NoSuchElementException("No hay elementos para despachar.");
         }
 
         intercambiar(0, heap.size() - 1);
-        E elementoPrioritario = heap.remove(heap.size() - 1);
-       
+        E elementoPrioritario = heap.removeLast();
+
         if (!estaVacia()) {
             hundir(0);
         }
-        
+
         return elementoPrioritario;
     }
 
     public E verSiguienteVehiculo() {
         if (estaVacia()) {
-            throw new NoSuchElementException("No existen más vehiculos.");
+            throw new NoSuchElementException("No existen mas elementos.");
         }
         return heap.get(0);
     }
-    
+
     public boolean estaVacia() {
         return heap.isEmpty();
     }
@@ -54,11 +63,7 @@ public class ColaPrioridad<E> {
     public int size() {
         return heap.size();
     }
-    
 
-
-
-    
     private void flotar(int indice) {
         while (indice > 0 && esMayor(indice, padre(indice))) {
             intercambiar(indice, padre(indice));
@@ -66,19 +71,17 @@ public class ColaPrioridad<E> {
         }
     }
 
-
     private void hundir(int indice) {
         int indiceMayor = indice;
-        int hijoIzquierdo = hijoIzquierdo(indice);
-        int hijoDerecho = hijoDerecho(indice);
+        int izq = hijoIzquierdo(indice);
+        int der = hijoDerecho(indice);
 
-
-        if (hijoIzquierdo < heap.size() && esMayor(hijoIzquierdo, indiceMayor)) {
-            indiceMayor = hijoIzquierdo;
+        if (izq < heap.size() && esMayor(izq, indiceMayor)) {
+            indiceMayor = izq;
         }
 
-        if (hijoDerecho < heap.size() && esMayor(hijoDerecho, indiceMayor)) {
-            indiceMayor = hijoDerecho;
+        if (der < heap.size() && esMayor(der, indiceMayor)) {
+            indiceMayor = der;
         }
 
         if (indiceMayor != indice) {
@@ -87,9 +90,8 @@ public class ColaPrioridad<E> {
         }
     }
 
-
-    private boolean esMayor(int indice1, int indice2) {
-        return comparador.compare(heap.get(indice1), heap.get(indice2)) > 0;
+    private boolean esMayor(int i, int j) {
+        return comparador.compare(heap.get(i), heap.get(j)) > 0;
     }
 
     private void intercambiar(int i, int j) {
@@ -97,7 +99,6 @@ public class ColaPrioridad<E> {
         heap.set(i, heap.get(j));
         heap.set(j, temp);
     }
-
 
     private int padre(int indice) {
         return (indice - 1) / 2;
